# rclone-ext

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml
rclone_ext/: __init__.py  extension.py  main.py  pass_through.py
